--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,13 @@
+#main{
+    text-align: center;
+    padding: 0 50px;
+    
+    height: 100vh;
+}
+
 img{
-    margin: auto;
-    width: 50%;
+    max-width: 100%;
+  display: block;
+  height: auto;
+  margin: 0 auto;
 }
